summaries/errors_2025-07-22_15-41-15.txt

❌ update_pitcher_team_names ERROR (2025-07-22 03:41:19 PM EDT):
Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/update_pitcher_team_names.py", line 41, in <module>
    main()
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/update_pitcher_team_names.py", line 37, in main
    update_team_names(PITCHERS_HOME_FILE)
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/update_pitcher_team_names.py", line 24, in update_team_names
    raise ValueError(f"❌ Missing 'team' column in {pitchers_file}.")
ValueError: ❌ Missing 'team' column in data/adjusted/pitchers_home.csv.

---

❌ apply_pitcher_park_adjustment ERROR (2025-07-22 03:41:28 PM EDT):
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3812, in get_loc
    return self._engine.get_loc(casted_key)
  File "pandas/_libs/index.pyx", line 167, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/index.pyx", line 196, in pandas._libs.index.IndexEngine.get_loc
  File "pandas/_libs/hashtable_class_helper.pxi", line 7088, in pandas._libs.hashtable.PyObjectHashTable.get_item
  File "pandas/_libs/hashtable_class_helper.pxi", line 7096, in pandas._libs.hashtable.PyObjectHashTable.get_item
KeyError: 'away_team'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/apply_pitcher_park_adjustment.py", line 143, in <module>
    main()
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/apply_pitcher_park_adjustment.py", line 135, in main
    adj_away, log_away = apply_adjustments(pitchers_away, games_df, "away", park_day, park_night)
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/apply_pitcher_park_adjustment.py", line 61, in apply_adjustments
    pitchers_df[team_key] = pitchers_df[team_key].astype(str).str.strip().str.lower()
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/frame.py", line 4107, in __getitem__
    indexer = self.columns.get_loc(key)
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/indexes/base.py", line 3819, in get_loc
    raise KeyError(key) from err
KeyError: 'away_team'

---

❌ combine_pitcher_weather_park_away ERROR (2025-07-22 03:41:29 PM EDT):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 27
    merged = pd.merge(
                     ^
SyntaxError: '(' was never closed

---

